Chapter3 almost finished

--- a/thesis-main/document/Bibliography.bib
+++ b/thesis-main/document/Bibliography.bib
@@ -209,4 +209,10 @@
   url     = {https://github.com/coqui-ai/TTS/blob/dev/recipes/ljspeech/vits_tts/train_vits.py}
   }
 
+@online{ljspeech,
+  author  = {LJ-Speech},
+  title   = {LJ-Speech Dataset},
+  url     = {https://keithito.com/LJ-Speech-Dataset/}
+  }
+
 
